--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,20 @@
-bcrypt==3.2.2
+bcrypt==4.0.0
 blinker==1.5
-cffi==1.15.1
 click==8.1.3
 colorama==0.4.5
 dnspython==2.2.1
-email-validator==1.2.1
-Flask==2.2.0
+email-validator==1.3.0
+Flask==2.2.2
+Flask-Bcrypt==1.0.1
 Flask-DebugToolbar==0.13.1
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.1
-greenlet==1.1.2
-idna==3.3
+greenlet==1.1.3
+idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 psycopg2-binary==2.9.3
-pycparser==2.21
-SQLAlchemy==1.4.39
-Werkzeug==2.2.1
+SQLAlchemy==1.4.41
+Werkzeug==2.2.2
 WTForms==3.0.1
