--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 bcrypt==4.0.0
 blinker==1.5
+certifi==2022.9.24
+charset-normalizer==2.1.1
 click==8.1.3
 colorama==0.4.5
 dnspython==2.2.1
@@ -15,6 +17,8 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 psycopg2-binary==2.9.3
+requests==2.28.1
 SQLAlchemy==1.4.41
+urllib3==1.26.12
 Werkzeug==2.2.2
 WTForms==3.0.1
