--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 bcrypt==4.0.0
 blinker==1.5
+cachelib==0.9.0
 certifi==2022.9.24
 charset-normalizer==2.1.1
 click==8.1.3
@@ -9,6 +10,7 @@ email-validator==1.3.0
 Flask==2.2.2
 Flask-Bcrypt==1.0.1
 Flask-DebugToolbar==0.13.1
+Flask-Session==0.4.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.1
 greenlet==1.1.3
